Added resume contact info

--- a/index.html
+++ b/index.html
@@ -4,5 +4,7 @@
 </head>
 <body>
   <h1>Jahan Powell</h1>
+  <p>4060 Meadowbrook Lane<br/>St. Louis Park, MN 55426<br/>Phone (682) 999-7301<br/>
+    jahanpowell23@gmail.com<br/></p>
 </body>
 </html>
