Adding highlights of qualifications of resume

--- a/index.html
+++ b/index.html
@@ -6,5 +6,14 @@
   <h1>Jahan Powell</h1>
   <p>4060 Meadowbrook Lane<br/>St. Louis Park, MN 55426<br/>Phone (682) 999-7301<br/>
     jahanpowell23@gmail.com<br/></p>
+  <h2>Professional Objective:</h2>
+  <p>Gain knowlege and experience working in the technical field to pursue a career as a software engineer</p>
+  <h2>Highlights of Qualifications:</h2>
+  <p><b>Government affairs intern</b></p>
+  <p>Resonsible for managing the Government Affairs website, researching legislation of interest to SUPERVALU,
+    editing correspondence to public officials and updating compliance and trade association information.</p>
+  <p><b>Legislative Intern</b></p>
+  <p>Responsible for composing letters to constituents, researching bills being passed in the legislature,
+    sitting in on committee meetings, and filing for the Senator's office.</p>
 </body>
 </html>
