--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
   <title>Jahan's Resume</title>
+  <link href="styles.css" rel="stylesheet"/>
 </head>
 <body>
   <h1>Jahan Powell</h1>
@@ -9,23 +10,23 @@
   <h2>Professional Objective:</h2>
   <p>Gain knowlege and experience working in the technical field to pursue a career as a software engineer</p>
   <h2>Highlights of Qualifications:</h2>
-  <h3>Government affairs intern</h3>
+  <h3 class="highlights-subheadings">Government affairs intern</h3>
   <p>Resonsible for managing the Government Affairs website, researching legislation of interest to SUPERVALU,
     editing correspondence to public officials and updating compliance and trade association information.</p>
-  <h3>Legislative Intern</h3>
+  <h3 class="highlights-subheadings">Legislative Intern</h3>
   <p>Responsible for composing letters to constituents, researching bills being passed in the legislature,
     sitting in on committee meetings, and filing for the Senator's office.</p>
   <h2>Work Experience:</h2>
   <p>10/13-Present Outback Steakhouse Bloomington, MN</p>
-  <h3>Bartender</h3>
+  <h3 class="highlights-subheadings">Bartender</h3>
   <p>provide quality customer service to guests and selling food and drink promotions.</p>
   <p>10/16-10/17 Wells Fargo Westlake, TX</p>
-  <h3>Phone Banker</h3>
+  <h3 class="highlights-subheadings">Phone Banker</h3>
   <p>Assist Wells Fargo valued customers with their banking needs, including checking, savings and credit card
     accounts. Responsibilities include opening fraud claims, providing information on Wells Fargo products and services,
     resolving banking issues and educating customers on the banking processes.</p>
   <h2>Education:</h2>
-  <h3>Metropolitan State University, St. Paul, MN</h3>
+  <h3 class="highlights-subheadings">Metropolitan State University, St. Paul, MN</h3>
   <p>Bachelor of Arts in Social Science (Political Science)</p>
   <p>Student Presidential Leardership Award Recipient</p>
   <p>Graduation Date: May 2012</p>
