--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
     resolving banking issues and educating customers on the banking processes.</p>
   <h2>Education:</h2>
   <h3 class="highlights-subheadings">Metropolitan State University, St. Paul, MN</h3>
-  <p class="paragraph-spacing">Bachelor of Arts in Social Science (Political Science)</p>
-  <p class="paragraph-spacing">Student Presidential Leardership Award Recipient</p>
-  <p class="paragraph-spacing">Graduation Date: May 2012</p>
-  <p class="paragraph-spacing">GPA: 3.4</p>
+  <p class="paragraph-spacing-education">Bachelor of Arts in Social Science (Political Science)</p>
+  <p class="paragraph-spacing-education">Student Presidential Leardership Award Recipient</p>
+  <p class="paragraph-spacing-education">Graduation Date: May 2012</p>
+  <p class="paragraph-spacing-education">GPA: 3.4</p>
   <p>Student Senate</p>
-  <p class="paragraph-spacing">Mnscu Political Representative</p>
-  <p class="paragraph-spacing">Chair and Founder of Student Political Committee</p>
-  <p class="paragraph-spacing">Student Presidential Leadership Award Recipient</p>
+  <p class="paragraph-spacing-education">Mnscu Political Representative</p>
+  <p class="paragraph-spacing-education">Chair and Founder of Student Political Committee</p>
+  <p class="paragraph-spacing-education">Student Presidential Leadership Award Recipient</p>
 </body>
 </html>
