spacing to name

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <link href="styles.css" rel="stylesheet"/>
 </head>
 <body>
-  <h1>Jahan Powell</h1>
-  <p>4060 Meadowbrook Lane<br/>St. Louis Park, MN 55426<br/>Phone (682) 999-7301<br/>
+  <h1 class="highlights-subheadings">Jahan Powell</h1>
+  <p class="paragraph-spacing">4060 Meadowbrook Lane<br/>St. Louis Park, MN 55426<br/>Phone (682) 999-7301<br/>
     jahanpowell23@gmail.com<br/></p>
   <h2>Professional Objective:</h2>
   <p>Gain knowlege and experience working in the technical field to pursue a career as a software engineer</p>
@@ -31,7 +31,7 @@
   <p class="paragraph-spacing-education">Student Presidential Leardership Award Recipient</p>
   <p class="paragraph-spacing-education">Graduation Date: May 2012</p>
   <p class="paragraph-spacing-education">GPA: 3.4</p>
-  <p>Student Senate</p>
+  <p class="paragraph-spacing-special">Student Senate</p>
   <p class="paragraph-spacing-education">Mnscu Political Representative</p>
   <p class="paragraph-spacing-education">Chair and Founder of Student Political Committee</p>
   <p class="paragraph-spacing-education">Student Presidential Leadership Award Recipient</p>
