--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <p class="paragraph-spacing">4060 Meadowbrook Lane<br/>St. Louis Park, MN 55426<br/>Phone (682) 999-7301<br/>
     jahanpowell23@gmail.com<br/></p>
   <h2>Professional Objective:</h2>
-  <p>Gain knowlege and experience working in the technical field to pursue a career as a software engineer</p>
+  <p>Gain knowlege and experience working in the technical field to pursue a career as a software engineer.</p>
   <h2>Highlights of Qualifications:</h2>
   <h3 class="highlights-subheadings">Government affairs intern</h3>
   <p class="paragraph-spacing">Resonsible for managing the Government Affairs website, researching legislation of interest to SUPERVALU,
